deleting a user medicine
